[gd_scene load_steps=25 format=2]

[ext_resource path="res://Resources/country-platform-back.png" type="Texture" id=1]
[ext_resource path="res://Resources/country-platform-forest.png" type="Texture" id=2]
[ext_resource path="res://Resources/Jungle_terrain.png" type="Texture" id=3]
[ext_resource path="res://Resources/country-sky.png" type="Texture" id=4]
[ext_resource path="res://Player.gd" type="Script" id=5]
[ext_resource path="res://Resources/star.png" type="Texture" id=6]
[ext_resource path="res://adventurer-run3-sword-Sheet.png" type="Texture" id=7]
[ext_resource path="res://Star.gd" type="Script" id=8]
[ext_resource path="res://Resources/Star-blue.png" type="Texture" id=9]
[ext_resource path="res://Resources/star-yellow.png" type="Texture" id=10]
[ext_resource path="res://Spawner.gd" type="Script" id=11]
[ext_resource path="res://SkeletonSpawner.tscn" type="PackedScene" id=12]
[ext_resource path="res://Army.tscn" type="PackedScene" id=13]
[ext_resource path="res://Knight.tscn" type="PackedScene" id=14]

[sub_resource type="TileSet" id=1]
0/name = "Jungle_terrain.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 896, 480 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 50, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 100, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 150, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 200, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 250, 0, 50, 37 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 12.0
height = 8.0

[node name="Root" type="Node2D"]
position = Vector2( 96, 80 )

[node name="BuildingSpawner" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="SkeletonSpawner" parent="." instance=ExtResource( 12 )]
position = Vector2( 840, 336 )
z_index = 1

[node name="ImdeadArmy" parent="." instance=ExtResource( 13 )]
position = Vector2( 840, 336 )

[node name="Background" type="Node2D" parent="."]
z_index = -5
__meta__ = {
"_edit_lock_": true
}

[node name="country-sky" type="Sprite" parent="Background"]
position = Vector2( 512, 160 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 300 )

[node name="country-platform-back" type="Sprite" parent="Background"]
position = Vector2( 512, 224 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 250 )

[node name="country-platform-forest" type="Sprite" parent="Background"]
position = Vector2( 512, 256 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 200 )

[node name="TileMap" type="TileMap" parent="Background"]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 655360, 0, 0, 655361, 0, 1, 655362, 0, 1, 655363, 0, 1, 655364, 0, 1, 655365, 0, 1, 655366, 0, 1, 655367, 0, 1, 655368, 0, 1, 655369, 0, 1, 655370, 0, 1, 655371, 0, 1, 655372, 0, 1, 655373, 0, 1, 655374, 0, 1, 655375, 0, 1, 655376, 0, 1, 655377, 0, 1, 655378, 0, 1, 655379, 0, 1, 655380, 0, 1, 655381, 0, 1, 655382, 0, 1, 655383, 0, 1, 655384, 0, 1, 655385, 0, 1, 655386, 0, 1, 655387, 0, 1, 655388, 0, 1, 655389, 0, 1, 655390, 0, 1, 655391, 0, 2, 720896, 0, 196608, 720897, 0, 196609, 720898, 0, 196609, 720899, 0, 196609, 720900, 0, 196609, 720901, 0, 196609, 720902, 0, 196609, 720903, 0, 196609, 720904, 0, 196609, 720905, 0, 196609, 720906, 0, 196609, 720907, 0, 196609, 720908, 0, 196609, 720909, 0, 196609, 720910, 0, 196609, 720911, 0, 196609, 720912, 0, 196609, 720913, 0, 196609, 720914, 0, 196609, 720915, 0, 196609, 720916, 0, 196609, 720917, 0, 196609, 720918, 0, 196609, 720919, 0, 196609, 720920, 0, 196609, 720921, 0, 196609, 720922, 0, 196609, 720923, 0, 196609, 720924, 0, 196609, 720925, 0, 196609, 720926, 0, 196609, 720927, 0, 196610, 786432, 0, 196622, 786433, 0, 262161, 786434, 0, 262161, 786435, 0, 262161, 786436, 0, 262161, 786437, 0, 262161, 786438, 0, 262161, 786439, 0, 262161, 786440, 0, 262161, 786441, 0, 262161, 786442, 0, 262161, 786443, 0, 262161, 786444, 0, 262161, 786445, 0, 262161, 786446, 0, 262161, 786447, 0, 262161, 786448, 0, 262161, 786449, 0, 262161, 786450, 0, 262161, 786451, 0, 262161, 786452, 0, 262161, 786453, 0, 262161, 786454, 0, 262161, 786455, 0, 262161, 786456, 0, 262161, 786457, 0, 262161, 786458, 0, 262161, 786459, 0, 262161, 786460, 0, 262161, 786461, 0, 262161, 786462, 0, 262161, 786463, 0, 196623, 851968, 0, 196622, 851969, 0, 262161, 851970, 0, 262161, 851971, 0, 262161, 851972, 0, 262161, 851973, 0, 262161, 851974, 0, 262161, 851975, 0, 262161, 851976, 0, 262161, 851977, 0, 262161, 851978, 0, 262161, 851979, 0, 262161, 851980, 0, 262161, 851981, 0, 262161, 851982, 0, 262161, 851983, 0, 262161, 851984, 0, 262161, 851985, 0, 262161, 851986, 0, 262161, 851987, 0, 262161, 851988, 0, 262161, 851989, 0, 262161, 851990, 0, 262161, 851991, 0, 262161, 851992, 0, 262161, 851993, 0, 262161, 851994, 0, 262161, 851995, 0, 262161, 851996, 0, 262161, 851997, 0, 262161, 851998, 0, 262161, 851999, 0, 196623, 917504, 0, 196622, 917505, 0, 262161, 917506, 0, 262161, 917507, 0, 262161, 917508, 0, 262161, 917509, 0, 262161, 917510, 0, 262161, 917511, 0, 262161, 917512, 0, 262161, 917513, 0, 262161, 917514, 0, 262161, 917515, 0, 262161, 917516, 0, 262161, 917517, 0, 262161, 917518, 0, 262161, 917519, 0, 262161, 917520, 0, 262161, 917521, 0, 262161, 917522, 0, 262161, 917523, 0, 262161, 917524, 0, 262161, 917525, 0, 262161, 917526, 0, 262161, 917527, 0, 262161, 917528, 0, 262161, 917529, 0, 262161, 917530, 0, 262161, 917531, 0, 262161, 917532, 0, 262161, 917533, 0, 262161, 917534, 0, 262161, 917535, 0, 196623, 983040, 0, 196622, 983041, 0, 262161, 983042, 0, 262161, 983043, 0, 262161, 983044, 0, 262161, 983045, 0, 262161, 983046, 0, 262161, 983047, 0, 262161, 983048, 0, 262161, 983049, 0, 262161, 983050, 0, 262161, 983051, 0, 262161, 983052, 0, 262161, 983053, 0, 262161, 983054, 0, 262161, 983055, 0, 262161, 983056, 0, 262161, 983057, 0, 262161, 983058, 0, 262161, 983059, 0, 262161, 983060, 0, 262161, 983061, 0, 262161, 983062, 0, 262161, 983063, 0, 262161, 983064, 0, 262161, 983065, 0, 262161, 983066, 0, 262161, 983067, 0, 262161, 983068, 0, 262161, 983069, 0, 262161, 983070, 0, 262161, 983071, 0, 196623, 1048576, 0, 196622, 1048577, 0, 262161, 1048578, 0, 262161, 1048579, 0, 262161, 1048580, 0, 262161, 1048581, 0, 262161, 1048582, 0, 262161, 1048583, 0, 262161, 1048584, 0, 262161, 1048585, 0, 262161, 1048586, 0, 262161, 1048587, 0, 262161, 1048588, 0, 262161, 1048589, 0, 262161, 1048590, 0, 262161, 1048591, 0, 262161, 1048592, 0, 262161, 1048593, 0, 262161, 1048594, 0, 262161, 1048595, 0, 262161, 1048596, 0, 262161, 1048597, 0, 262161, 1048598, 0, 262161, 1048599, 0, 262161, 1048600, 0, 262161, 1048601, 0, 262161, 1048602, 0, 262161, 1048603, 0, 262161, 1048604, 0, 262161, 1048605, 0, 262161, 1048606, 0, 262161, 1048607, 0, 196623, 1114112, 0, 196622, 1114113, 0, 262161, 1114114, 0, 262161, 1114115, 0, 262161, 1114116, 0, 262161, 1114117, 0, 262161, 1114118, 0, 262161, 1114119, 0, 262161, 1114120, 0, 262161, 1114121, 0, 262161, 1114122, 0, 262161, 1114123, 0, 262161, 1114124, 0, 262161, 1114125, 0, 262161, 1114126, 0, 262161, 1114127, 0, 262161, 1114128, 0, 262161, 1114129, 0, 262161, 1114130, 0, 262161, 1114131, 0, 262161, 1114132, 0, 262161, 1114133, 0, 262161, 1114134, 0, 262161, 1114135, 0, 262161, 1114136, 0, 262161, 1114137, 0, 262161, 1114138, 0, 262161, 1114139, 0, 262161, 1114140, 0, 262161, 1114141, 0, 262161, 1114142, 0, 262161, 1114143, 0, 196623, 1179648, 0, 196622, 1179649, 0, 262161, 1179650, 0, 262161, 1179651, 0, 262161, 1179652, 0, 262161, 1179653, 0, 262161, 1179654, 0, 262161, 1179655, 0, 262161, 1179656, 0, 262161, 1179657, 0, 262161, 1179658, 0, 262161, 1179659, 0, 262161, 1179660, 0, 262161, 1179661, 0, 262161, 1179662, 0, 262161, 1179663, 0, 262161, 1179664, 0, 262161, 1179665, 0, 262161, 1179666, 0, 262161, 1179667, 0, 262161, 1179668, 0, 262161, 1179669, 0, 262161, 1179670, 0, 262161, 1179671, 0, 262161, 1179672, 0, 262161, 1179673, 0, 262161, 1179674, 0, 262161, 1179675, 0, 262161, 1179676, 0, 262161, 1179677, 0, 262161, 1179678, 0, 262161, 1179679, 0, 196623 )

[node name="Star" type="Node2D" parent="."]
position = Vector2( 384, 320 )
script = ExtResource( 8 )

[node name="star_black" type="Sprite" parent="Star"]
texture = ExtResource( 6 )

[node name="star_yellow" type="Sprite" parent="Star"]
visible = false
texture = ExtResource( 10 )

[node name="star_blue" type="Sprite" parent="Star"]
visible = false
texture = ExtResource( 9 )

[node name="Area2D" type="Area2D" parent="Star"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Star/Area2D"]
shape = SubResource( 2 )

[node name="Player" type="Node2D" parent="."]
position = Vector2( 256, 336 )
z_index = 2
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
frames = SubResource( 9 )
frame = 4
playing = true

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="PlayerArea" type="Area2D" parent="Player"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/PlayerArea"]
position = Vector2( 0, 4 )
shape = SubResource( 10 )

[node name="Knight" parent="." instance=ExtResource( 14 )]
position = Vector2( 384, 336 )
velocity = 40
[connection signal="register_army" from="ImdeadArmy" to="SkeletonSpawner" method="_on_ImdeadArmy_register_army"]
[connection signal="selected" from="Star" to="Star" method="_on_Star_selected"]
[connection signal="selected" from="Star" to="BuildingSpawner" method="_on_Star_selected"]
[connection signal="area_entered" from="Star/Area2D" to="Star" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Star/Area2D" to="Star" method="_on_Area2D_area_exited"]
